--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     My goal is to be a software engineer and teacher! </p>
 
 <ul> 
-    <li>reading</li>
+    <li>reading books</li>
     <li>drawing</li>
     <li>video games</li>
     <li>going to the the gym</li>
