--- a/main.html
+++ b/main.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <title>All About me!</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Hi, my name is Holly!</h1>
+<h1 >Hi, my name is Holly!</h1>
 <p>This is a basic html website I've built to practice my skills.
     My goal is to be a software engineer and teacher! </p>
 
