--- a/main.html
+++ b/main.html
@@ -9,13 +9,15 @@
 <h1 >Hi, my name is Holly!</h1>
 <p>This is a basic html website I've built to practice my skills.
     My goal is to be a software engineer and teacher! </p>
+<div class="list"> 
+    <ul> 
+        <li>reading books</li>
+        <li>drawing</li>
+        <li>video games</li>
+        <li>going to the the gym</li>
+    </ul>
+</div>
 
-<ul> 
-    <li>reading books</li>
-    <li>drawing</li>
-    <li>video games</li>
-    <li>going to the the gym</li>
-</ul>
 
 <p>Connect with me on <a href="https://www.linkedin.com/in/hollydr/"> linkedin</a> </p>
 </body>
