--- a/main.html
+++ b/main.html
@@ -1,24 +1,109 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>All About me!</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>All About Me!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1 >Hi, my name is Holly!</h1>
-<p>This is a basic html website I've built to practice my skills.
-    My goal is to be a software engineer and teacher! </p>
-<div class="list"> 
-    <ul> 
-        <li>reading books</li>
-        <li>drawing</li>
-        <li>video games</li>
-        <li>going to the the gym</li>
-    </ul>
-</div>
+    <!-- Task 1: Profile Name -->
+    <header>
+        <h1 class="profile-name">Holly</h1>
+        <img src="home_icon.png" alt="Home Icon" class="home-icon">
+    </header>
 
+    <!-- Task 2: Navigation Bar -->
+    <nav>
+        <ul class="navbar">
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Project Details</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#recommendations">Recommendations</a></li>
+        </ul>
+    </nav>
 
-<p>Connect with me on <a href="https://www.linkedin.com/in/hollydr/"> linkedin</a> </p>
+    <!-- Task 3: About Me Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <img src="profile_image.jpg" alt="Profile Image" class="profile-img">
+        <p>Hi! I'm Holly, a software engineer with a passion for teaching. I love creating websites and learning new technologies.</p>
+    </section>
+
+    <!-- Task 4: Skills Section -->
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills-list">
+            <div class="skill">
+                <img src="html_logo.png" alt="HTML Logo">
+                <p>HTML</p>
+            </div>
+            <div class="skill">
+                <img src="css_logo.png" alt="CSS Logo">
+                <p>CSS</p>
+            </div>
+            <div class="skill">
+                <img src="js_logo.png" alt="JavaScript Logo">
+                <p>JavaScript</p>
+            </div>
+            <div class="skill">
+                <img src="react_logo.png" alt="React Logo">
+                <p>React</p>
+            </div>
+            <div class="skill">
+                <img src="nodejs_logo.png" alt="Node.js Logo">
+                <p>Node.js</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Task 5: Projects Section -->
+    <section id="projects">
+        <h2>Project Details</h2>
+        <ul class="projects-list">
+            <li>
+                <h3>Project 1: Personal Website</h3>
+                <p>Built using HTML, CSS, and JavaScript to showcase my skills and portfolio.</p>
+            </li>
+            <li>
+                <h3>Project 2: Weather App</h3>
+                <p>A weather forecasting app using the OpenWeather API and React.</p>
+            </li>
+            <li>
+                <h3>Project 3: To-Do List</h3>
+                <p>Task management app built with Node.js and MongoDB for back-end functionality.</p>
+            </li>
+        </ul>
+    </section>
+
+    <!-- Task 6: Recommendations Section -->
+    <section id="recommendations">
+        <h2>Recommendations</h2>
+        <div class="recommendation">
+            <p>"Holly is an exceptional developer and a great team player!" - John Doe</p>
+        </div>
+        <div class="recommendation">
+            <p>"Her problem-solving skills and enthusiasm for learning are inspiring!" - Jane Smith</p>
+        </div>
+        <div class="recommendation">
+            <p>"Holly is a fast learner and contributes greatly to our team!" - Mike Johnson</p>
+        </div>
+    </section>
+
+    <!-- Task 7: New Recommendation -->
+    <section id="new-recommendation">
+        <h3>New Recommendation</h3>
+        <button onclick="addRecommendation()">Add Recommendation</button>
+    </section>
+
+    <script>
+        function addRecommendation() {
+            const newRecommendation = document.createElement("div");
+            newRecommendation.classList.add("recommendation");
+            newRecommendation.innerHTML = "<p>'Holly is a dedicated and hardworking individual!' - New User</p>";
+            document.getElementById("recommendations").appendChild(newRecommendation);
+        }
+    </script>
 </body>
 </html>
