--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <!-- Task 1: Profile Name -->
     <header>
         <h1 class="profile-name">Holly</h1>
-        <img src="home_icon.png" alt="Home Icon" class="home-icon">
+        <img src="images/home.png" " alt="Home Icon" class="home-icon">
     </header>
 
     <!-- Task 2: Navigation Bar -->
@@ -36,23 +36,23 @@
         <h2>Skills</h2>
         <div class="skills-list">
             <div class="skill">
-                <img src="html_logo.png" alt="HTML Logo">
+                <img src="images/html-5.png" alt="HTML Logo">
                 <p>HTML</p>
             </div>
             <div class="skill">
-                <img src="css_logo.png" alt="CSS Logo">
+                <img src="images/css.png" alt="CSS Logo">
                 <p>CSS</p>
             </div>
             <div class="skill">
-                <img src="js_logo.png" alt="JavaScript Logo">
+                <img src="images/js.png" alt="JavaScript Logo">
                 <p>JavaScript</p>
             </div>
             <div class="skill">
-                <img src="react_logo.png" alt="React Logo">
+                <img src="images/science.png" alt="React Logo">
                 <p>React</p>
             </div>
             <div class="skill">
-                <img src="nodejs_logo.png" alt="Node.js Logo">
+                <img src="images/developer.png" alt="Node.js Logo">
                 <p>Node.js</p>
             </div>
         </div>
