add some stlying

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 
     <!-- Task 1: Profile Name -->
     <header>
-        <h1 class="profile-name">Holly</h1>
+        <h1 class="profile-name">Holly Drazenovich</h1>
         <img src="images/home.png" " alt="Home Icon" class="home-icon">
     </header>
 
@@ -27,7 +27,7 @@
     <!-- Task 3: About Me Section -->
     <section id="about">
         <h2>About Me</h2>
-        <img src="profile_image.jpg" alt="Profile Image" class="profile-img">
+        <img src="images/pfp.jpeg" alt="Profile Image" class="profile-img">
         <p>Hi! I'm Holly, a software engineer with a passion for teaching. I love creating websites and learning new technologies.</p>
     </section>
 
@@ -67,17 +67,17 @@
                 <p>Built using HTML, CSS, and JavaScript to showcase my skills and portfolio.</p>
             </li>
             <li>
-                <h3>Project 2: Weather App</h3>
-                <p>A weather forecasting app using the OpenWeather API and React.</p>
+                <h3>Record Scratch</h3>
+                <p>My 1st personal project built </p>
             </li>
             <li>
-                <h3>Project 3: To-Do List</h3>
-                <p>Task management app built with Node.js and MongoDB for back-end functionality.</p>
+                <h3>Stardew TODO: </h3>
+                <p>Task management app built to help all the inner famers inside us all while playing Stardew Valley </p>
             </li>
         </ul>
     </section>
 
-    <!-- Task 6: Recommendations Section -->
+    <!-- Task 6: Recommendations Section
     <section id="recommendations">
         <h2>Recommendations</h2>
         <div class="recommendation">
@@ -89,13 +89,13 @@
         <div class="recommendation">
             <p>"Holly is a fast learner and contributes greatly to our team!" - Mike Johnson</p>
         </div>
-    </section>
+    </section> -->
 
-    <!-- Task 7: New Recommendation -->
+    <!-- Task 7: New Recommendation
     <section id="new-recommendation">
         <h3>New Recommendation</h3>
         <button onclick="addRecommendation()">Add Recommendation</button>
-    </section>
+    </section> -->
 
  
 </body>
