--- a/main.html
+++ b/main.html
@@ -7,13 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Task 1: Profile Name -->
-    <header>
-        <h1 class="profile-name">Holly Drazenovich</h1>
-        <img src="images/home.png" " alt="Home Icon" class="home-icon">
-    </header>
-
     <!-- Task 2: Navigation Bar -->
     <nav>
         <ul class="navbar">
@@ -23,6 +16,15 @@
             <li><a href="#recommendations">Recommendations</a></li>
         </ul>
     </nav>
+
+
+    <!-- Task 1: Profile Name -->
+    <header>
+        <h1 class="profile-name">Holly Drazenovich</h1>
+        <img src="images/home.png" " alt="Home Icon" class="home-icon">
+    </header>
+
+
 
     <!-- Task 3: About Me Section -->
     <section id="about">
@@ -60,7 +62,7 @@
 
     <!-- Task 5: Projects Section -->
     <section id="projects">
-        <h2>Project Details</h2>
+        <h2>Project Details:</h2>
         <ul class="projects-list">
             <li>
                 <h3>Project 1: Personal Website</h3>
