added new function

--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All About Me!</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- Task 2: Navigation Bar -->
@@ -62,7 +63,7 @@
 
     <!-- Task 5: Projects Section -->
     <section id="projects">
-        <h2>Project Details:</h2>
+        <h2>Project Details</h2>
         <ul class="projects-list">
             <li>
                 <h3>Project 1: Personal Website</h3>
@@ -79,7 +80,7 @@
         </ul>
     </section>
 
-    <!-- Task 6: Recommendations Section
+
     <section id="recommendations">
         <h2>Recommendations</h2>
         <div class="recommendation">
@@ -91,13 +92,13 @@
         <div class="recommendation">
             <p>"Holly is a fast learner and contributes greatly to our team!" - Mike Johnson</p>
         </div>
-    </section> -->
+    </section>
 
-    <!-- Task 7: New Recommendation
+  
     <section id="new-recommendation">
         <h3>New Recommendation</h3>
         <button onclick="addRecommendation()">Add Recommendation</button>
-    </section> -->
+    </section>
 
  
 </body>
